--- a/blog-test/pom.xml
+++ b/blog-test/pom.xml
@@ -16,6 +16,7 @@
         <spock.version>0.7-groovy-2.0</spock.version>
         <selenium-firefox-driver.version>2.43.1</selenium-firefox-driver.version>
         <geb.version>0.10.0</geb.version>
+        <mongo.driver.version>2.12.0</mongo.driver.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -116,6 +117,11 @@
             <groupId>org.gebish</groupId>
             <artifactId>geb-spock</artifactId>
             <version>${geb.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>${mongo.driver.version}</version>
         </dependency>
     </dependencies>
 
